# aoc

./: AdventOfCode.cabal  LICENSE  flake.nix  hie.yaml
nix/: overlays.nix
src/AOC2022/p06/: Main.hs
src/AOC2022/p19/: Main.hs
src/AOC2024/p01/: Main.hs
src/AOC2024/p02/: Main.hs
src/AOC2024/p07/: Main.hs
src/AOC2025/p01/: Main.hs
src/Problem01/: Solution.hs
src/Problem03/: Solution.hs
src/Problem19/: Solution.hs
